objects/Edition__c.object
<CustomObject>
    <fields>
        <fullName>Currency_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Editions</relationshipLabel>
        <relationshipName>Editions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Edition_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Edition</label>
        <referenceTo>Edition__c</referenceTo>
        <relationshipLabel>Editions</relationshipLabel>
        <relationshipName>Editions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent_Object</label>
        <referenceTo>Parent_Object__c</referenceTo>
        <relationshipLabel>Editions</relationshipLabel>
        <relationshipName>Editions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Edition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_LookUp__c</columns>
        <columns>Edition_LookUp__c</columns>
        <columns>Parent_LookUp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Edition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Editions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>